src/App.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  user-select: none;
}

body {
  background-color: #0D0D0D;
  overflow-X: hidden;
}

/* Hero */

.hero {
  height: 120vh;
  overflow: hidden;
  position: relative;
}

.heroWrapper {
  background-color: #EEE3D3;
  color: #0D0D0D;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 1;
  width: 100vw;
  height: 120vh;
}

.heroClipper {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  overflow: hidden;
  background-color: #0D0D0D;
  color: #EEE3D3;
  width: 100%;
  height: 120vh;
  z-index: 2;
}

.heroWrapper.clip {
  background-color: #0D0D0D;
  color: #EEE3D3;

}

.navbar {
  justify-content: space-between;
  align-items: center;
  width: 90%;
  margin-inline: auto;
  padding-top: 2rem;
}

.greet {
  background-color: #232323;
  align-items: center;
  border-radius: 40px;
  padding-inline: 1rem;
  padding-block: 0.3rem;
}

.ham {
  background: #232323;
  border-radius: 50%;
  padding: 1rem;
  position: relative;
  cursor: pointer;
}

.hams {
  width: 16px;
  height: 1px;
  border-radius: 1.2rem;
  margin-top: 0.2rem;
  background: #EEE3D3;
  transition: transform 0.3s ease;
  border: 0.5px solid #EEE3D3;
}

.menu {
  position: absolute;
  top: 4rem;
  right: 1rem;
  padding: 0.4rem;
  border-radius: 1rem;
  transition: all 0.3s ease-in;
  background-color: #373737;
  color: rgb(237, 237, 237);
}

.menu>div {
  border-radius: 0.5rem;
  padding-right: 4rem;
  padding-left: 0.7rem;
  padding-block: 0.6rem;
  transition: all 0.1s ease-in;
}

.menu>div:hover {
  background-color: #707070;
}

.one {
  transform: translateY(-100%);
}

.three {
  transform: translateY(100%);
}

.heading {
  font-weight: 600;
  font-size: 4rem;
  justify-content: center;
  align-items: center;
  margin-top: 4rem;
}

.subHeading {
  justify-content: center;
  align-items: center;
  width: 40%;
  margin-inline: auto;
  font-size: 1.6rem;
  text-align: center;
  margin-top: 2rem;
}

.slick-slider {
  margin-block: 3rem;
  /* animation: marquee 80s infinite; */
}

.caroItem {
  width: 18rem;
  border-radius: 24px;
  margin-inline: 1.2rem;
  height: 24rem;
  transition: all 0.3s ease;
}

.caroItem.inactive {
  filter: grayscale();
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-100%);
  }
}


/* Case Study Page */

.container {
  background-color: #0D0D0D;
  color: #EEE3D3;
  padding-left: 3rem;
  padding-bottom: 3rem;
}

.caseHead {
  padding-top: 6rem;
  width: 40%;
  font-weight: 700;
  font-size: 2.5rem;
}

.caseInfo {
  margin-top: 3rem;
  width: 90%;
  padding-bottom: 6rem;
}

.head {
  font-weight: 500;
  font-size: 0.7rem;
}

.name {
  font-size: 1.6rem;
}

.aboutVision {
  margin-top: 3rem;
}

.info {
  margin-top: 1rem;
  width: 90%;
}

.stickyTop {
  position: sticky;
  top: 150px;
  overflow: visible;
  padding-top: 7vw;
  padding-bottom: 20vw;
}

.navList {
  padding-block: 1rem;
}

.nav {
  padding-left: 0;
  margin-top: 0rem;
  color: #bcbcbc;
}

.sectionHeading {
  padding-top: 5vw;
  font-size: 3rem;
  font-weight: 700;
  margin-bottom: 3rem;
}

.solution {
  margin-top: 3rem;
}

/* ChatBot */
#chatBot {
  width: 40%;
  color: #333;
  background: #121212;
  overflow: hidden;
  border-radius: 20px;
  margin: 2rem;
}

.chatName {
  color: #807f7f;
}

.awayText {
  padding: 0.8rem;
  margin: 0.2rem;
  display: flex;
  align-items: flex-start;
  flex-direction: column;
  justify-content: flex-start;
}

.ownText {
  padding: 0.8rem;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
}

.chatName {
  font-weight: 500;
}

.chatText {
  background-color: #e9e9eb;
  width: fit-content;
  color: #000;
  border-radius: 20px;
  padding: 0.8rem;
}

.chatText.own {
  color: #e9e9eb;
  background-color: #0078ff;
}

.lowerBox {
  display: flex;
  margin-inline: 1rem;
  margin-block: 0.6rem;
}

.logo {
  width: 2rem;
  cursor: pointer;
  margin-inline: 0.4rem;
}

.messageForm {
  width: -webkit-fill-available;
}

.upperBox {
  overflow: hidden;
  height: 11rem;
}

.textContainer {
  transition: all 0.4s ease;
}

#subject,
#phone,
#email {
  display: none;
  opacity: 0;
}


/* Case Study Section */

.studyCont {
  background-color: #0D0D0D;
  padding-block: 3rem;
}

.wideStudy {
  background: #121212;
  color: #EEE3D3;
  overflow: hidden;
  border-radius: 28px;
  transition: all 0.2s ease-in;
}
.wideStudy:hover{
  background: #383838;
  box-shadow: rgb(45, 45, 45) 0px 0px 10px 2px;
  scale: 1.05;
}

.caseHeading{
  font-size: 1.6rem;
  font-weight: 600;
}
.caseText{
  font-size: 1.2rem;
}

.studyText {
  margin: 2rem;
}

.redirect {
  background: #EEE3D3 !important;
  border-radius: 20px;
  margin-top: 2rem !important;
  color: #000;
}
/* Case Study Carousel */

.carousel-root{
  height: 100%;
}
.slide, .carousel, .slider, .slider-wrapper{
  height: 100% !important;
}

